@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace RedVentures.Bot_O_Mat.API.Data.Enums
+{
+    public enum ErrandStatus
+    {
+        Not_Started,
+        In_Progress,
+        Failed,
+        Completed
+    }
+}
