@@ -1,14 +1,15 @@
 ﻿using RedVentures.Bot_O_Mat.API.Data.DbSets;
+using RedVentures.Bot_O_Mat.API.Data.Enums;
 using System.Collections.Generic;
 using System.Threading.Tasks;
 
 namespace RedVentures.Bot_O_Mat.API.Services
 {
-    interface IRobotService
+    public interface IRobotService
     {
-        Task<Robot> GetRobot();
-        Task<IEnumerable<Robot>> GetRobots();
-        Task<Robot> UpdateRobot();
-        Task DeleteRobot(int Id);
+        Task<Robot> CreateRobot(string Name, RobotType robotType);
+        Task<Robot> GetRobot(int Id);
+        Task<IEnumerable<Robot>> GetRobotsBy(string Name, RobotType? Type, int Skip = 0);
+        Task ScrapRobot(int Id);
     }
 }
