@@ -13,4 +13,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RedVentures.Bot-O-Mat.API\RedVentures.Bot-O-Mat.API.csproj" />
+  </ItemGroup>
+
 </Project>
