@@ -6,7 +6,7 @@ namespace RedVentures.Bot_O_Mat.Tests
     public class UnitTest1
     {
         [TestMethod]
-        public void TestMethod1()
+        public void CreateRobot()
         {
         }
     }
